deploy/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: __APP__
spec:
  parentRefs:
    - name: cilium-gateway-https
      namespace: flux-system
      sectionName: https-wildcard # shared *.nezam.site listener
  hostnames:
    - __APP__-staging.nezam.site
  rules:
    - backendRefs:
        - name: __APP__
          port: 80
